# lex

./: .dir-locals.el  .dockerignore  .env.dev  .env.example  .flake8  .flake8rc  .gitignore  .gitmodules  .sample-env  CHANGELOG.md  Dockerfile  Makefile  README.md  VERSION  bb.edn  build.clj  compose.yml  deps.edn  docker-compose.yml  project.clj  pyproject.toml  requirements.txt  tests.edn  zdl-lex-config-sample.edn
.clj-kondo/: config.edn
ansible/: Makefile  Vagrantfile  ansible.cfg  api.yml  client.yml  git.yml  hosts.yml  main.yml  playbook.yml  requirements.txt  roles.yml  webdav.yml
cli/: deps.edn
client/: CHANGELOG.md  deps.edn  docker-compose.yml  project.clj  test-project.xpr
common/: .dir-locals.el  deps.edn  project.clj
corpus/: deps.edn  project.clj
dev/: user.clj
doc/: Regeln_2016_redigiert_2018.html  intro.md  lex-git-workflow.md
framework/: .classpath  .project
oxygen/: plugin.dtd  project.xpr  updateSite.xml
plugin/: .classpath  .project
publish/: INSTALL  Makefile  README  README.md  ausnahmen.py  esh.py  exist.py  new_wb2db.py  oxygen.py  redaktion.py  setup.cfg  setup.py
schema/: Makefile
scripts/: compile_cli.clj  compile_client.clj  compile_server.clj  facets.clj  load-basex.sh  load-db.sh  oxygen.clj  package.clj  release  sync-data.sh  tunnel-mantis-db
server/: .dir-locals.el  CHANGELOG.md  Makefile  README.md  deps.edn  project.clj
solr/: solrconfig.xml
src/: log4j.properties  logback.xml  template.xml
test/: dev.clj  log4j.properties  logback-test.xml  user.clj
validator/: deps.edn
wikimedia/: Makefile  (+2 more)
(+843 files in other folders)
