[tool.poetry]
name = "zdl-lex"
version = "0.0.0"
description = "ZDL/Lex – Lexikographic Workbench"
authors = ["Gregor Middell <gregor.middell@bbaw.de>"]

[tool.poetry.dependencies]
python = "^3.7"
flake8 = "^3.7"
lxml = "^4.4"
pytz = "^2019.2"
requests = "^2.22"
autoflake = "^1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
